fixed alignment on banner

--- a/src/pageLayouts/frc/Home/home.import.less
+++ b/src/pageLayouts/frc/Home/home.import.less
@@ -20,6 +20,7 @@ html {
     display: flex;
     flex: 1;
     justify-content: center;
+    align-items: center;
     text-align: center;
     .home__banner-text-container {
       max-width: 800px;
